--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,16 +8,25 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      COMPOSE_FILE: ./docker-compose.yml
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Build
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./Dockerfile
+        run: docker-compose build
 
       - name: Test
-        run: docker-compose run  --rm web pytest
+        run: docker-compose run web pytest
+
+#      - name: Build
+#        uses: docker/build-push-action@v3
+#        with:
+#          context: .
+#          file: ./Dockerfile
+
+#      - name: Test
+#        run: docker run
+##        run: docker-compose run  --rm web pytest
